Showing team symbol on entry comments
